samples/_failures_safe/1761321059_08f095_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b8c90d3.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_3b8c90d3.c:146:9: error: expected expression at end of input
  146 |         token.value[0] =
      |         ^~~~~
./samples/SAFE/__tmp_3b8c90d3.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3b8c90d3.c:146:9: error: expected declaration or statement at end of input
